Bug 430625 - tools buttons for external tools that specify a mime-type are not activated when creating a new file of this type
Summary: tools buttons for external tools that specify a mime-type are not activated w...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 19.12.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-20 14:58 UTC by b2.temp
Modified: 2020-12-31 16:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description b2.temp 2020-12-20 14:58:00 UTC
SUMMARY


STEPS TO REPRODUCE

1. Setup a tool, restricted to work with a particular mime type
2. put a toolbar button for this tool
3. restart Kate
4. File, New
5. File, Save as..., save with the right extension

OBSERVED RESULT

The button for the tool is greyed until you close and reopen the file

EXPECTED RESULT

The button should be ungreyed from the moment the file has been saved

SOFTWARE/OS VERSIONS

Kate 19.12.1, Fedora packages.
Comment 1 Dominik Haumann 2020-12-21 20:26:31 UTC
One needs to track the mimetype changed or documenturlchanged signals to track this kind of change. I don't have the time to look into this right now.
Comment 2 Bug Janitor Service 2020-12-31 15:59:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/154
Comment 3 Dominik Haumann 2020-12-31 16:15:19 UTC
Git commit 4ae5e3e4a80260b5e501e9a1d48f71c6c72ebe3e by Dominik Haumann.
Committed on 31/12/2020 at 15:58.
Pushed by cullmann into branch 'master'.

External Tools: Track mimetype changes to enable/disable actions

M  +15   -1    addons/externaltools/kateexternaltoolsview.cpp
M  +8    -1    addons/externaltools/kateexternaltoolsview.h

https://invent.kde.org/utilities/kate/commit/4ae5e3e4a80260b5e501e9a1d48f71c6c72ebe3e