External Tools: Track mimetype changes to enable/disable actions

BUG: 430625